--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -87,7 +87,29 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row d-flex justify-content-end">
-                        <div class="col-9">
+                        <div class="col">
+                            <div class="customdropdown">
+                                <div class="select selectcategory">
+                                    <span id="selectedcategory">Filter by Category</span>
+                                    <i class="fa fa-chevron-left"></i>
+                                </div>
+                                <input type="hidden" name="categoryid" id="categoryid">
+                                <ul class="customdropdown-menu categorylist">
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="customdropdown">
+                                <div class="select selectbranch">
+                                    <span id="selectedbranch">Filter by Branch</span>
+                                    <i class="fa fa-chevron-left"></i>
+                                </div>
+                                <input type="hidden" name="branchid" id="branchid">
+                                <ul class="customdropdown-menu branchlist">
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-5">
                             <div class="input-group">
                                 <input type="text" class="form-control bg-light border-0 small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
@@ -99,7 +121,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-1">
                             <div class="row d-flex justify-content-center">
                                 <button class="btn btn-outline-inventory ml-2" id="export-button">
                                     <i class="fas fa-download fa-sm"></i>
