--- a/views/access/accessscripts.ejs
+++ b/views/access/accessscripts.ejs
@@ -114,7 +114,7 @@
         $('#search-input').on('input', filterTableRows);
 
         function populateAccessTable(data) {
-            console.log(data);
+            // console.log(data);
             const tableBody = $('#access-table tbody');
             tableBody.empty();
 
