--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -66,12 +66,12 @@ style="background-color: rgba(255, 255, 255, 0.4) !important; backdrop-filter: b
                 <span class="badge badge-danger badge-counter" id="badgecount">0</span>
             </a>
             <!-- Dropdown - Alerts -->
-            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                aria-labelledby="alertsDropdown">
+            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in alert-messages notification-size"
+                aria-labelledby="alertsDropdown" id="alert-container">
                 <h6 class="dropdown-header alert-header">
                     Alerts Center
                 </h6>
-                <div class="alert-container" id="alert-messages">
+                <div class="alert-container">
                     
                 </div>
 
