--- a/views/discount.ejs
+++ b/views/discount.ejs
@@ -35,6 +35,8 @@
     <a class="scroll-to-top rounded" href="#pCreated by-top">
       <i class="fas fa-angle-up"></i>
     </a>
-    <%- include("scripts.ejs") %> <%- include("./discount/discountscripts.ejs") %>
+    <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
+    <%- include("./discount/discountscripts.ejs") %>
   </body>
 </html>
