--- a/views/posshiftlog.ejs
+++ b/views/posshiftlog.ejs
@@ -38,7 +38,8 @@
     <a class="scroll-to-top rounded" href="#pCreated by-top">
       <i class="fas fa-angle-up"></i>
     </a>
-    <%- include("scripts.ejs") %> <%-
-    include("./posshiftlog/posshiftlogscripts.ejs") %>
+    <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
+    <%-include("./posshiftlog/posshiftlogscripts.ejs") %>
   </body>
 </html>
