--- a/views/productinventory.ejs
+++ b/views/productinventory.ejs
@@ -36,7 +36,8 @@
     <a class="scroll-to-top rounded" href="#pCreated by-top">
       <i class="fas fa-angle-up"></i>
     </a>
-    <%- include("scripts.ejs") %> <%-
-    include("./productinventory/productinventoryscripts.ejs") %>
+    <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
+    <%- include("./productinventory/productinventoryscripts.ejs") %>
   </body>
 </html>
