--- a/views/cashreports.ejs
+++ b/views/cashreports.ejs
@@ -45,6 +45,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
     <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
     <%- include("./cashreports/cashreportsscripts.ejs") %>
 </body>
 
