--- a/views/location.ejs
+++ b/views/location.ejs
@@ -45,6 +45,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
     <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
     <%- include("./location/locationscripts.ejs") %>
 </body>
 
