--- a/views/salesinventoryhistory.ejs
+++ b/views/salesinventoryhistory.ejs
@@ -44,6 +44,7 @@
         <i class="fas fa-angle-up"></i>
     </a>
     <%- include("scripts.ejs") %>
+    <%- include("notification.ejs") %>
     <%- include("./salesinventoryhistory/salesinventoryhistoryscripts.ejs") %>
 </body>
 
