--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -524,7 +524,7 @@
                         if(item.branchid === '<%= branchid%>'){
                             const tr = $('<tr>').append(
                                 $('<td>', { text: item.inventoryid, 'data-label': 'Inventory ID', class: 'custom-mobile-align' }),
-                                $('<td>', { text: item.productname, 'data-label': 'Product', class: 'custom-mobile-align' }),
+                                $('<td>', { text: item.productid, 'data-label': 'Product', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.category, 'data-label': 'Category', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.branchid, 'data-label': 'Branch ID', class: 'custom-mobile-align' }),
                                 $('<td>', { text: item.quantity, 'data-label': 'Quantity', class: 'custom-mobile-align' }),
