--- a/views/notification.ejs
+++ b/views/notification.ejs
@@ -16,13 +16,13 @@
         let alertdiv = "";
 
         socket.on('pushNotification', (data) => {
-            console.log("Data Pulled", data.length);
+            // console.log("Data Pulled", data.length);
             let notifcount = 0;
             data.forEach((item) => {
                 if (item.userid == '<%= usercode%>') {
                     let existingNotification = $(`#${item.notifid}`);
                     if (item.status === "CLOSED") {
-                        console.log('Removing notification:', item.notifid);
+                        // console.log('Removing notification:', item.notifid);
                         existingNotification.remove();
                     } else {
                         notifcount += 1;
@@ -39,7 +39,7 @@
                                 existingNotification.find('.message-div').css('font-weight', 'normal');
                             }
                         } else {
-                            console.log('Appending new notification:', item.notifid);
+                            // console.log('Appending new notification:', item.notifid);
                             let fontWeight = (item.status === "UNREAD") ? 'bold' : 'normal';
                             let pushNotification = `
                             <div class="notification">
@@ -105,7 +105,7 @@
             let notifid = notificationDiv.find("a").attr("id");
 
             console.log("notifid:", notifid);
-            
+
             $.ajax({
                 type: 'POST',
                 url: '/salesdetails/read',
@@ -239,5 +239,17 @@
             });
         }
 
+        // if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+        //     navigator.mediaDevices.getUserMedia({ audio: true })
+        //         .then(function(stream) {
+        //             console.log('Access to microphone granted.');
+        //         })
+        //         .catch(function(error) {
+        //             console.error('Error accessing microphone:', error);
+        //         });
+        // } else {
+        //     console.error('getUserMedia is not supported in this browser.');
+        // }
     });
+    
 </script>
