--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -98,17 +98,31 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col">
-                            <div class="customdropdown">
-                                <div class="select selectbranch">
-                                    <span id="selectedbranch">Filter by Branch</span>
-                                    <i class="fa fa-chevron-left"></i>
+                        <% if (accesstype === "Owner") { %>
+                            <div class="col">
+                                <div class="customdropdown">
+                                    <div class="select selectbranch">
+                                        <span id="selectedbranch">Filter by Branch</span>
+                                        <i class="fa fa-chevron-left"></i>
+                                    </div>
+                                    <input type="hidden" name="branchid" id="branchid">
+                                    <ul class="customdropdown-menu branchlist">
+                                    </ul>
                                 </div>
-                                <input type="hidden" name="branchid" id="branchid">
-                                <ul class="customdropdown-menu branchlist">
-                                </ul>
                             </div>
-                        </div>
+                        <% } else { %>
+                            <div class="col" hidden>
+                                <div class="customdropdown">
+                                    <div class="select selectbranch">
+                                        <span id="selectedbranch">Filter by Branch</span>
+                                        <i class="fa fa-chevron-left"></i>
+                                    </div>
+                                    <input type="hidden" name="branchid" id="branchid">
+                                    <ul class="customdropdown-menu branchlist">
+                                    </ul>
+                                </div>
+                            </div>
+                        <% } %>
                         <div class="col-5">
                             <div class="input-group">
                                 <input type="text" class="form-control bg-light border-0 small"
@@ -123,7 +137,7 @@
                         </div>
                         <div class="col-1">
                             <div class="row d-flex justify-content-center">
-                                <button class="btn btn-outline-inventory ml-2" id="export-button">
+                                <button class="btn btn-outline-inventory ml-2" id="convertopdf">
                                     <i class="fas fa-download fa-sm"></i>
                                 </button>
                             </div>
