--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -170,8 +170,8 @@
                                     <div class="card">
                                         <div class="card-header">
                                             <div class="row">
-                                                <div class="col">
-                                                    <div class="card-title">
+                                                <div class="col-6">
+                                                    <div class="card-title text-right mt-2">
                                                         Sales Per Employee
                                                     </div>
                                                 </div>
@@ -184,6 +184,13 @@
                                                         <input type="hidden" name="cashierid" id="cashierid">
                                                         <ul class="customdropdown-menu cashierlist">
                                                         </ul>
+                                                    </div>
+                                                </div>
+                                                <div class="col-1" style="padding-left: 0 !important; padding-right: 0 !important;">
+                                                    <div class="row d-flex justify-content-center">
+                                                        <button class="btn btn-outline-inventory" id="convertopdf">
+                                                            <i class="fas fa-download fa-sm"></i>
+                                                        </button>
                                                     </div>
                                                 </div>
                                             </div>
