--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -113,7 +113,7 @@
         </div>
         <div class="card-header py-3 header-bg">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-5">
                     <div class="row mb-2">
                         <button id="toggleButton" name="toggleButton"
                             class=" ml-3 btn btn-circle btn-outline-inventory ">
@@ -131,6 +131,13 @@
                                 <i class="fas fa-search fa-sm"></i>
                             </button>
                         </div>
+                    </div>
+                </div>
+                <div class="col-1">
+                    <div class="row d-flex justify-content-center">
+                        <button class="btn btn-outline-inventory ml-2" id="convertopdf">
+                            <i class="fas fa-download fa-sm"></i>
+                        </button>
                     </div>
                 </div>
             </div>
