--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -599,7 +599,8 @@
                                 url: "/pdf/processpdfdata",
                                 data: {
                                     processeddata: refinedData,
-                                    template: template
+                                    template: template,
+                                    category: category
                                 },
                                 success: function (result) {
                                     // console.log("MSG: ", result.msg)
