--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -147,7 +147,7 @@
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.productid, 'data-label': 'Employee ID', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.productname, 'data-label': 'Full Name', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.description, 'data-label': 'Position', class: 'custom-mobile-align no-wrap' }),
+                        $('<td>', { text: item.description, 'data-label': 'Position', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.category, 'data-label': 'Contact Info', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.vendorid, 'data-label': 'Date Hired', class: 'custom-mobile-align' }),
                         $('<td>', { text: formatCurrency(item.price), 'data-label': 'Created By', class: 'custom-mobile-align' }),
