--- a/views/topbar.ejs
+++ b/views/topbar.ejs
@@ -66,14 +66,17 @@ style="background-color: rgba(255, 255, 255, 0.4) !important; backdrop-filter: b
                 <span class="badge badge-danger badge-counter" id="badgecount">0</span>
             </a>
             <!-- Dropdown - Alerts -->
-            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in alert-messages notification-size"
-                aria-labelledby="alertsDropdown" id="alert-container">
-                <h6 class="dropdown-header alert-header">
-                    Alerts Center
-                </h6>
-                <div class="alert-container">
-                    
+            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in alert-messages "
+                aria-labelledby="alertsDropdown" >
+                <div class="col-12" style="padding-left: 0 !important; padding-right: 0 !important;">
+                    <h6 class="dropdown-header alert-header">
+                        Alerts Center
+                    </h6>
+                    <div class="alert-container notification-size" id="alert-container">
+                        
+                    </div>
                 </div>
+                
                 <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" id="test-menu">
                     <a class="dropdown-item" href="#">
                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
